--- a/src/components/content/ArticleDownloadsLink.astro
+++ b/src/components/content/ArticleDownloadsLink.astro
@@ -1,1 +1,20 @@
+---
+const href = "../downloads/";
+---
+
+<p class="article-downloads-link">
+  Free download guides:
+  <a href={href}>open the downloads hub</a>
+</p>
+
+<style>
+  .article-downloads-link {
+    margin: 0 0 1rem 0;
+    font-size: 0.95rem;
+    opacity: 0.9;
+  }
+  .article-downloads-link a {
+    text-decoration: underline;
+  }
+</style>
 
