--- a/src/pages/articles/[slug].astro
+++ b/src/pages/articles/[slug].astro
@@ -2,6 +2,8 @@
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import ArticleCTA from "../../components/content/ArticleCTA.astro";
 import { getCollection } from "astro:content";
+import ArticleDownloadsLink from "../components/content/ArticleDownloadsLink.astro";
+
 
 const base = (import.meta.env.BASE_URL || "/").replace(/\/$/, "") + "/";
 
