--- a/src/components/content/ArticleDownloadsLink.astro
+++ b/src/components/content/ArticleDownloadsLink.astro
@@ -1,5 +1,6 @@
 ---
-const href = "../downloads/";
+const base = import.meta.env.BASE_URL || "/";
+const href = `${base}downloads/`;
 ---
 
 <p class="article-downloads-link">
@@ -17,4 +18,3 @@ const href = "../downloads/";
     text-decoration: underline;
   }
 </style>
-
