--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -35,6 +35,7 @@ const REDBUBBLE_PROFILE_URL = "https://www.redbubble.com/people/SamFrederiksen/s
     <title>{title}</title>
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="sitemap" type="application/xml" href="/Solara-Meridian-Studio-RedBubble/sitemap-index.xml" />
 
     <!-- Public asset served by Astro from /public/styles/global.css -->
     <link rel="stylesheet" href={`${base}/styles/global.css`} />
